# contractor_task_timer

./: .gitignore  README.md  pyproject.toml
timer/: __init__.py  __main__.py  cli.py  config.py
timer/core/: __init__.py  task.py  timer.py
timer/reports/: __init__.py  export.py
timer/storage/: __init__.py  json_store.py
